2017-12-02  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* .gitignore: Created.
	* ChangeLog: Created.
	* README.md: Created.
	* seahorse-serial/Makefile: Created.
	* seahorse-serial/seahorse-serial.ino: Created.
