@@ -1,0 +1,39 @@
+# Christmas Tree serial connected cuttlefish lights
+
+# Copyright (C) 2017 Embecosm Limited <www.embecosm.com>
+
+# Contributor Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+# This file is part of the Embecosm Christmas Tree decoration project 2016.
+
+# This program is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the Free
+# Software Foundation, either version 3 of the License, or (at your option)
+# any later version.
+
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
+# more details.
+
+# You should have received a copy of the GNU General Public License along
+# with this program.  If not, see <http://www.gnu.org/licenses/>. */
+
+# To use this on modern arduino you'll need two packages:
+
+#  sudo apt install arduino
+#  sudo apt install arduino-mk
+
+# Use "make" to compile and "make upload" to upload.
+
+# Define Arduino specific flags, but if not set they'll be guessed
+# from the last values used with the Arduino IDE.
+
+BOARD_TAG = uno
+#ARDUINO_LIBS = 
+#MONITOR_PORT = /dev/ttyUSB0 (will be automatically guessed from IDE prefs)
+
+# All we need is to include the standard makefile (from the arduino-mk
+# package on Ubuntu).
+
+include /usr/share/arduino/Arduino.mk
